# Tender-Processing-System

./: .gitignore  README.md  app.py  docker-compose.yml  folder structure.txt  pyproject.toml  requirements.txt
backend/: Dockerfile  README.MD
backend/app/: database.py  main.py  pending.txt
backend/app/api/: __init__.py
backend/app/api/routes/: document.py  tender.py  user.py
backend/app/models/: document_model.py  tender_model.py  user_model.py
backend/app/services/: ai_matching.py  ocr_service.py  tender_service.py
backend/app/utils/: file_utils.py
database/: README.md  docker-compose.yml  elastic_config.json  init.sql  seed_data.py
deployment/: Jenkinsfile.txt  README.md  github-actions.yml  nginx.conf
docs/: API_Documentation.MD  Installation_Guide.MD  System_Architecture.MD
frontend/: Dockerfile  README.md  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Navbar.js  TenderCard.js  TenderDashboard.js  UploadBox.js
frontend/src/pages/: Dashboard.js  Status.js  Upload.js
frontend/src/services/: api.js
