[tool.poetry]
name = "tender-processing-system"
version = "0.1.0"
description = "AI-powered automated tender processing system"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
elasticsearch = "^8.11.0"
docker = "^7.0.0"
spacy = "^3.6.1"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.2"
black = "^24.2.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
